hphp/hack/test/typecheck/optional_parameters/optional_parameter_error_msg.php.exp
ERROR: File "optional_parameter_error_msg.php", line 8, characters 34-48:
Invalid argument (Typing[4041])
  File "optional_parameter_error_msg.php", line 8, characters 34-48:
  Too many mandatory arguments (expected 1 but got 2)
  File "optional_parameter_error_msg.php", line 4, characters 3-37:
  Because of this definition
ERROR: File "optional_parameter_error_msg.php", line 8, characters 34-48:
Too many positional arguments (expected 1 but got 2) (Typing[4105])
  File "optional_parameter_error_msg.php", line 4, characters 3-37:
  Definition is here
  File "optional_parameter_error_msg.php", line 8, characters 39-40:
  Try converting this argument as optional
ERROR: File "optional_parameter_error_msg.php", line 9, characters 34-44:
Too few positional arguments (required 2 but got 1) (Typing[4104])
  File "optional_parameter_error_msg.php", line 4, characters 3-37:
  Definition is here
